--- a/auth/login.html
+++ b/auth/login.html
@@ -88,7 +88,8 @@
                         <!-- Register Link -->
                         <p class="text-sm text-gray-600 text-center">
                             Belum memiliki akun?
-                            <a href="#" class="text-teal-500 hover:text-teal-600 font-bold">Daftar Sekarang</a>
+                            <a href="register.html" class="text-teal-500 hover:text-teal-600 font-bold">Daftar
+                                Sekarang</a>
                         </p>
                     </div>
 
@@ -132,7 +133,8 @@
             }
 
             console.log('Login submitted:', { email, password });
-            alert('Login berhasil!');
+            // Redirect to portal dashboard
+            window.location.href = '../portal-dashboard.html';
         }
     </script>
 </body>
