--- a/user/index.html
+++ b/user/index.html
@@ -55,8 +55,8 @@
                     </div>
                     <ul class="p-2 text-sm">
                         <!-- Menu Profile -->
-                        <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
-                        <li><a href="../auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
+                        <li><a href="./biasa/user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
+                        <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
                     </ul>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             </a>
             <ul class="space-y-2 font-medium">
                 <li>
-                    <a href="./index.html"
+                    <a href="./biasa/index.html"
                         class="flex items-center px-2 py-1.5 text-indigo-600 bg-purple-100 rounded-lg group">
                         <svg class="w-5 h-5 text-indigo-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -90,7 +90,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./courses/my-courses.html"
+                    <a href="./biasa/courses/my-courses.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -114,7 +114,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./library/index.html"
+                    <a href="./biasa/library/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -138,7 +138,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./support/help.html"
+                    <a href="./biasa/support/help.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
