--- a/kab-kota/index.html
+++ b/kab-kota/index.html
@@ -91,42 +91,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./courses/my-courses.html"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M6 4h12M6 4v16M6 20h12M6 20H5m13 0h1m-1 0V4m0 0h1M6 4H5M9 8h1v1H9V8Zm5 0h1v1h-1V8Zm-5 4h1v1H9v-1Zm5 0h1v1h-1v-1Zm-3 4h2a1 1 0 0 1 1 1v4h-4v-4a1 1 0 0 1 1-1Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Kursus Saya</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M9.143 4H4.857A.857.857 0 0 0 4 4.857v4.286c0 .473.384.857.857.857h4.286A.857.857 0 0 0 10 9.143V4.857A.857.857 0 0 0 9.143 4Zm10 0h-4.286a.857.857 0 0 0-.857.857v4.286c0 .473.384.857.857.857h4.286A.857.857 0 0 0 20 9.143V4.857A.857.857 0 0 0 19.143 4Zm-10 10H4.857a.857.857 0 0 0-.857.857v4.286c0 .473.384.857.857.857h4.286a.857.857 0 0 0 .857-.857v-4.286A.857.857 0 0 0 9.143 14Zm10 0h-4.286a.857.857 0 0 0-.857.857v4.286c0 .473.384.857.857.857h4.286a.857.857 0 0 0 .857-.857v-4.286a.857.857 0 0 0-.857-.857Z" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Katalog</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="./library/index.html"
-                        class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
-                        <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                            viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M12 6.03v13m0-13c-2.819-.831-4.715-1.076-8.029-1.023A.99.99 0 0 0 3 6v11c0 .563.466 1.014 1.03 1.007 3.122-.043 5.018.212 7.97 1.023m0-13c2.819-.831 4.715-1.076 8.029-1.023A.99.99 0 0 1 21 6v11c0 .563-.466 1.014-1.03 1.007-3.122-.043-5.018.212-7.97 1.023" />
-                        </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Perpustakaan</span>
-                    </a>
-                </li>
-                <li>
                     <a href="#"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
@@ -187,23 +151,25 @@
                 </ol>
             </nav>
 
-            <!-- Bar Chart: SDM per Provinsi -->
+            <!-- Line Chart: RTK Aktif per Tahun -->
             <div class="bg-white rounded-lg p-6 shadow-sm mb-6">
                 <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM per Provinsi</h2>
-                    <div class="flex items-center gap-2">
-                        <label for="yearFilter" class="text-sm font-medium text-gray-700">Tahun:</label>
-                        <select id="yearFilter"
-                            class="px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
-                            <option value="2025">2025</option>
-                            <option value="2024" selected>2024</option>
-                            <option value="2023">2023</option>
-                            <option value="2022">2022</option>
-                        </select>
+                    <h2 class="text-xl font-bold text-gray-900">Jumlah RTK Aktif per Tahun</h2>
+                    <div class="flex items-center gap-3">
+                        <label for="fromYear" class="text-sm font-medium text-gray-700">Dari Tahun:</label>
+                        <input type="number" id="fromYear" value="2021" min="2015" max="2025"
+                            class="px-3 py-2 w-24 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <label for="toYear" class="text-sm font-medium text-gray-700">Sampai:</label>
+                        <input type="number" id="toYear" value="2025" min="2015" max="2025"
+                            class="px-3 py-2 w-24 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <button id="applyFilter"
+                            class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors">
+                            Terapkan
+                        </button>
                     </div>
                 </div>
                 <div class="h-96">
-                    <canvas id="sdmBarChart"></canvas>
+                    <canvas id="rtkLineChart"></canvas>
                 </div>
             </div>
 
@@ -249,64 +215,61 @@
             }
         });
 
-        // Chart data by year - 38 Provinces
-        const chartDataByYear = {
-            2022: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [245, 312, 289, 276, 198, 265, 156, 187, 234, 145,
-                    198, 276, 234, 189, 123, 298, 456, 567, 498, 234,
-                    534, 312, 167, 198, 134, 156, 178, 234, 189, 345,
-                    123, 145, 98, 112, 87, 76, 89, 94]
-            },
-            2023: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [289, 356, 324, 298, 234, 298, 187, 219, 267, 172,
-                    234, 312, 267, 218, 145, 334, 523, 645, 567, 276,
-                    612, 356, 198, 234, 156, 187, 206, 267, 219, 389,
-                    145, 172, 115, 134, 102, 89, 105, 112]
-            },
-            2024: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [324, 398, 367, 342, 265, 334, 215, 249, 298, 198,
-                    267, 345, 298, 245, 167, 378, 598, 734, 645, 312,
-                    698, 398, 234, 267, 178, 215, 234, 298, 249, 434,
-                    167, 198, 134, 156, 119, 104, 123, 131]
-            },
-            2025: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [156, 187, 165, 142, 98, 134, 89, 112, 124, 76,
-                    112, 145, 124, 98, 67, 156, 287, 356, 298, 134,
-                    324, 187, 98, 112, 78, 89, 98, 124, 106, 198,
-                    72, 86, 54, 67, 48, 42, 51, 58]
-            }
+        // RTK data by year (2015-2025)
+        const rtkDataByYear = {
+            2015: 1245,
+            2016: 1356,
+            2017: 1478,
+            2018: 1598,
+            2019: 1734,
+            2020: 1656,  // Slight decrease due to pandemic
+            2021: 1789,
+            2022: 1923,
+            2023: 2087,
+            2024: 2234,
+            2025: 2398
         };
 
-        // Bar Chart: SDM per Kab/Kota
-        const barCtx = document.getElementById('sdmBarChart').getContext('2d');
-        let sdmBarChart = new Chart(barCtx, {
-            type: 'bar',
+        // Function to get filtered data based on year range
+        function getFilteredData(fromYear, toYear) {
+            const labels = [];
+            const data = [];
+
+            for (let year = fromYear; year <= toYear; year++) {
+                if (rtkDataByYear[year] !== undefined) {
+                    labels.push(year.toString());
+                    data.push(rtkDataByYear[year]);
+                }
+            }
+
+            return { labels, data };
+        }
+
+        // Initialize with default range (2021-2025)
+        const initialData = getFilteredData(2021, 2025);
+
+        // Line Chart: RTK Aktif per Tahun
+        const lineCtx = document.getElementById('rtkLineChart').getContext('2d');
+        let rtkLineChart = new Chart(lineCtx, {
+            type: 'line',
             data: {
-                labels: chartDataByYear[2024].labels,
+                labels: initialData.labels,
                 datasets: [{
-                    label: 'Jumlah SDM',
-                    data: chartDataByYear[2024].data,
-                    backgroundColor: 'rgba(99, 102, 241, 0.8)',
+                    label: 'Jumlah RTK Aktif',
+                    data: initialData.data,
                     borderColor: 'rgba(99, 102, 241, 1)',
-                    borderWidth: 1,
-                    borderRadius: 6,
-                    hoverBackgroundColor: 'rgba(99, 102, 241, 1)'
+                    backgroundColor: 'rgba(99, 102, 241, 0.1)',
+                    borderWidth: 3,
+                    fill: true,
+                    tension: 0.4,
+                    pointRadius: 5,
+                    pointBackgroundColor: 'rgba(99, 102, 241, 1)',
+                    pointBorderColor: '#fff',
+                    pointBorderWidth: 2,
+                    pointHoverRadius: 7,
+                    pointHoverBackgroundColor: 'rgba(99, 102, 241, 1)',
+                    pointHoverBorderColor: '#fff',
+                    pointHoverBorderWidth: 3
                 }]
             },
             options: {
@@ -314,7 +277,15 @@
                 maintainAspectRatio: false,
                 plugins: {
                     legend: {
-                        display: false
+                        display: true,
+                        position: 'top',
+                        labels: {
+                            font: {
+                                size: 13,
+                                weight: '500'
+                            },
+                            padding: 15
+                        }
                     },
                     tooltip: {
                         backgroundColor: 'rgba(31, 41, 55, 0.95)',
@@ -326,6 +297,11 @@
                         },
                         bodyFont: {
                             size: 13
+                        },
+                        callbacks: {
+                            label: function (context) {
+                                return `RTK Aktif: ${context.parsed.y.toLocaleString()}`;
+                            }
                         }
                     }
                 },
@@ -335,6 +311,9 @@
                         ticks: {
                             font: {
                                 size: 12
+                            },
+                            callback: function (value) {
+                                return value.toLocaleString();
                             }
                         },
                         grid: {
@@ -355,12 +334,20 @@
             }
         });
 
-        // Year filter change handler
-        document.getElementById('yearFilter').addEventListener('change', function (e) {
-            const year = e.target.value;
-            sdmBarChart.data.labels = chartDataByYear[year].labels;
-            sdmBarChart.data.datasets[0].data = chartDataByYear[year].data;
-            sdmBarChart.update();
+        // Year range filter handler
+        document.getElementById('applyFilter').addEventListener('click', function () {
+            const fromYear = parseInt(document.getElementById('fromYear').value);
+            const toYear = parseInt(document.getElementById('toYear').value);
+
+            if (fromYear > toYear) {
+                alert('Tahun awal tidak boleh lebih besar dari tahun akhir!');
+                return;
+            }
+
+            const filteredData = getFilteredData(fromYear, toYear);
+            rtkLineChart.data.labels = filteredData.labels;
+            rtkLineChart.data.datasets[0].data = filteredData.data;
+            rtkLineChart.update();
         });
 
         // Pie Chart: Gender Distribution
@@ -370,7 +357,7 @@
             data: {
                 labels: ['Laki-laki', 'Perempuan'],
                 datasets: [{
-                    data: [5432, 5782],
+                    data: [1234, 1164],
                     backgroundColor: [
                         'rgba(59, 130, 246, 0.8)',
                         'rgba(236, 72, 153, 0.8)'
@@ -429,7 +416,7 @@
             data: {
                 labels: ['Modul Makro', 'Modul Mikro', 'Modul Pembangunan Ketenagakerjaan'],
                 datasets: [{
-                    data: [3456, 4234, 3524],
+                    data: [765, 892, 741],
                     backgroundColor: [
                         'rgba(16, 185, 129, 0.8)',
                         'rgba(245, 158, 11, 0.8)',
