--- a/portal-dashboard.html
+++ b/portal-dashboard.html
@@ -131,7 +131,7 @@
                 </a>
 
                 <!-- Admin Provinsi -->
-                <a href="#"
+                <a href="provinsi/index.html"
                     class="card-dashboard bg-white rounded-2xl p-8 shadow-md border border-slate-200 hover:border-emerald-300 group animate-fade-in"
                     style="animation-delay: 0.3s;">
                     <div class="flex flex-col items-center text-center space-y-4">
@@ -151,7 +151,7 @@
                 </a>
 
                 <!-- Admin Kab/Kota -->
-                <a href="#"
+                <a href="kab-kota/index.html"
                     class="card-dashboard bg-white rounded-2xl p-8 shadow-md border border-slate-200 hover:border-amber-300 group animate-fade-in"
                     style="animation-delay: 0.4s;">
                     <div class="flex flex-col items-center text-center space-y-4">
