--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -151,41 +151,31 @@
                 </ol>
             </nav>
 
-            <!-- Bar Chart: SDM per Provinsi -->
+            <!-- Bar Chart: Masa Aktif RTK per Provinsi -->
             <div class="bg-white rounded-lg p-6 shadow-sm mb-6">
                 <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM per Provinsi</h2>
-                    <div class="flex items-center gap-2">
-                        <label for="yearFilter" class="text-sm font-medium text-gray-700">Tahun:</label>
-                        <select id="yearFilter"
-                            class="px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
-                            <option value="2025" selected>2025</option>
-                            <option value="2024">2024</option>
-                            <option value="2023">2023</option>
-                            <option value="2022">2022</option>
-                        </select>
+                    <h2 class="text-xl font-bold text-gray-900">Masa Aktif RTK per Provinsi</h2>
+                    <div class="text-sm text-gray-600">
+                        <span class="font-medium">Tahun Sekarang:</span> 2025
+                        <span class="mx-2">|</span>
+                        <span class="font-medium">Masa Berlaku:</span> 5 Tahun
                     </div>
                 </div>
                 <div class="h-96">
-                    <canvas id="sdmBarChart"></canvas>
+                    <canvas id="rtkValidityBarChart"></canvas>
                 </div>
             </div>
 
-            <!-- Pie Charts Grid -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                <!-- Left Card: Gender Distribution Pie Chart -->
-                <div class="bg-white rounded-lg p-6 shadow-sm">
-                    <h2 class="text-xl font-bold text-gray-900 mb-6">Perbandingan Jenis Kelamin</h2>
-                    <div class="h-80 flex items-center justify-center">
-                        <canvas id="genderPieChart"></canvas>
-                    </div>
-                </div>
-
-                <!-- Right Card: Module Distribution Pie Chart -->
-                <div class="bg-white rounded-lg p-6 shadow-sm">
-                    <h2 class="text-xl font-bold text-gray-900 mb-6">Perbandingan Modul yang Diambil</h2>
-                    <div class="h-80 flex items-center justify-center">
-                        <canvas id="modulePieChart"></canvas>
+            <!-- RTK Validity Status Pie Chart -->
+            <div class="flex justify-center">
+                <div class="bg-white rounded-lg p-6 shadow-sm w-full lg:w-2/3">
+                    <h2 class="text-xl font-bold text-gray-900 mb-4 text-center">Status Masa Berlaku RTK Provinsi (2025)
+                    </h2>
+                    <p class="text-sm text-gray-600 mb-6 text-center">
+                        RTK yang sudah tidak berlaku <span class="font-semibold text-red-600">harus segera diurus</span>
+                    </p>
+                    <div class="h-96 flex items-center justify-center">
+                        <canvas id="rtkStatusPieChart"></canvas>
                     </div>
                 </div>
             </div>
@@ -213,64 +203,57 @@
             }
         });
 
-        // Chart data by year - 38 Provinces
-        const chartDataByYear = {
-            2022: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [245, 312, 289, 276, 198, 265, 156, 187, 234, 145,
-                    198, 276, 234, 189, 123, 298, 456, 567, 498, 234,
-                    534, 312, 167, 198, 134, 156, 178, 234, 189, 345,
-                    123, 145, 98, 112, 87, 76, 89, 94]
-            },
-            2023: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [289, 356, 324, 298, 234, 298, 187, 219, 267, 172,
-                    234, 312, 267, 218, 145, 334, 523, 645, 567, 276,
-                    612, 356, 198, 234, 156, 187, 206, 267, 219, 389,
-                    145, 172, 115, 134, 102, 89, 105, 112]
-            },
-            2024: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [324, 398, 367, 342, 265, 334, 215, 249, 298, 198,
-                    267, 345, 298, 245, 167, 378, 598, 734, 645, 312,
-                    698, 398, 234, 267, 178, 215, 234, 298, 249, 434,
-                    167, 198, 134, 156, 119, 104, 123, 131]
-            },
-            2025: {
-                labels: ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-                    'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-                    'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-                    'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'],
-                data: [156, 187, 165, 142, 98, 134, 89, 112, 124, 76,
-                    112, 145, 124, 98, 67, 156, 287, 356, 298, 134,
-                    324, 187, 98, 112, 78, 89, 98, 124, 106, 198,
-                    72, 86, 54, 67, 48, 42, 51, 58]
-            }
-        };
+        // RTK Validity Data for 38 Provinces
+        // Current year is 2025, RTK validity is 5 years
+        // If expiry year < 2025, it's expired and needs renewal
+        const provinceLabels = ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
+            'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
+            'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
+            'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'];
 
-        // Bar Chart: SDM per Kab/Kota
-        const barCtx = document.getElementById('sdmBarChart').getContext('2d');
-        let sdmBarChart = new Chart(barCtx, {
+        // Year when RTK expires for each province (some expired, some still valid)
+        const rtkExpiryYears = [
+            2023, 2026, 2025, 2027, 2022, 2026, 2024, 2025, 2027, 2023,
+            2026, 2028, 2025, 2024, 2023, 2027, 2028, 2029, 2027, 2026,
+            2028, 2027, 2024, 2026, 2023, 2024, 2025, 2027, 2025, 2028,
+            2023, 2024, 2022, 2023, 2022, 2023, 2024, 2023
+        ];
+
+        // Calculate valid vs expired
+        let validCount = 0;
+        let expiredCount = 0;
+        const currentYear = 2025;
+
+        rtkExpiryYears.forEach(year => {
+            if (year >= currentYear) {
+                validCount++;
+            } else {
+                expiredCount++;
+            }
+        });
+
+        // Create background colors for bar chart (red for expired, green for valid)
+        const backgroundColors = rtkExpiryYears.map(year =>
+            year >= currentYear ? 'rgba(16, 185, 129, 0.8)' : 'rgba(239, 68, 68, 0.8)'
+        );
+
+        const borderColors = rtkExpiryYears.map(year =>
+            year >= currentYear ? 'rgba(16, 185, 129, 1)' : 'rgba(239, 68, 68, 1)'
+        );
+
+        // Bar Chart: RTK Validity Period per Province
+        const barCtx = document.getElementById('rtkValidityBarChart').getContext('2d');
+        const rtkValidityBarChart = new Chart(barCtx, {
             type: 'bar',
             data: {
-                labels: chartDataByYear[2024].labels,
+                labels: provinceLabels,
                 datasets: [{
-                    label: 'Jumlah SDM',
-                    data: chartDataByYear[2024].data,
-                    backgroundColor: 'rgba(99, 102, 241, 0.8)',
-                    borderColor: 'rgba(99, 102, 241, 1)',
+                    label: 'Tahun Berlaku (Kadaluarsa)',
+                    data: rtkExpiryYears,
+                    backgroundColor: backgroundColors,
+                    borderColor: borderColors,
                     borderWidth: 1,
-                    borderRadius: 6,
-                    hoverBackgroundColor: 'rgba(99, 102, 241, 1)'
+                    borderRadius: 6
                 }]
             },
             options: {
@@ -278,7 +261,30 @@
                 maintainAspectRatio: false,
                 plugins: {
                     legend: {
-                        display: false
+                        display: true,
+                        position: 'top',
+                        labels: {
+                            font: {
+                                size: 13,
+                                weight: '500'
+                            },
+                            generateLabels: function () {
+                                return [
+                                    {
+                                        text: 'Masih Berlaku (≥ 2025)',
+                                        fillStyle: 'rgba(16, 185, 129, 0.8)',
+                                        strokeStyle: 'rgba(16, 185, 129, 1)',
+                                        lineWidth: 1
+                                    },
+                                    {
+                                        text: 'Sudah Tidak Berlaku (< 2025)',
+                                        fillStyle: 'rgba(239, 68, 68, 0.8)',
+                                        strokeStyle: 'rgba(239, 68, 68, 1)',
+                                        lineWidth: 1
+                                    }
+                                ];
+                            }
+                        }
                     },
                     tooltip: {
                         backgroundColor: 'rgba(31, 41, 55, 0.95)',
@@ -290,95 +296,56 @@
                         },
                         bodyFont: {
                             size: 13
+                        },
+                        callbacks: {
+                            label: function (context) {
+                                const year = context.parsed.y;
+                                const status = year >= currentYear ? 'Masih Berlaku' : 'Sudah Tidak Berlaku';
+                                return `Berlaku sampai: ${year} (${status})`;
+                            }
                         }
                     }
                 },
                 scales: {
                     y: {
-                        beginAtZero: true,
+                        beginAtZero: false,
+                        min: 2020,
+                        max: 2030,
                         ticks: {
                             font: {
                                 size: 12
-                            }
+                            },
+                            stepSize: 1
                         },
                         grid: {
                             color: 'rgba(229, 231, 235, 0.8)'
+                        },
+                        title: {
+                            display: true,
+                            text: 'Tahun Berlaku',
+                            font: {
+                                size: 13,
+                                weight: 'bold'
+                            }
                         }
                     },
                     x: {
                         ticks: {
                             font: {
-                                size: 12
-                            }
+                                size: 10
+                            },
+                            maxRotation: 45,
+                            minRotation: 45
                         },
                         grid: {
                             display: false
-                        }
-                    }
-                }
-            }
-        });
-
-        // Year filter change handler
-        document.getElementById('yearFilter').addEventListener('change', function (e) {
-            const year = e.target.value;
-            sdmBarChart.data.labels = chartDataByYear[year].labels;
-            sdmBarChart.data.datasets[0].data = chartDataByYear[year].data;
-            sdmBarChart.update();
-        });
-
-        // Pie Chart: Gender Distribution
-        const genderCtx = document.getElementById('genderPieChart').getContext('2d');
-        const genderPieChart = new Chart(genderCtx, {
-            type: 'pie',
-            data: {
-                labels: ['Laki-laki', 'Perempuan'],
-                datasets: [{
-                    data: [5432, 5782],
-                    backgroundColor: [
-                        'rgba(59, 130, 246, 0.8)',
-                        'rgba(236, 72, 153, 0.8)'
-                    ],
-                    borderColor: [
-                        'rgba(59, 130, 246, 1)',
-                        'rgba(236, 72, 153, 1)'
-                    ],
-                    borderWidth: 2,
-                    hoverOffset: 10
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: {
-                    legend: {
-                        position: 'bottom',
-                        labels: {
-                            padding: 20,
+                        },
+                        title: {
+                            display: true,
+                            text: 'Provinsi',
                             font: {
                                 size: 13,
-                                weight: '500'
-                            }
-                        }
-                    },
-                    tooltip: {
-                        backgroundColor: 'rgba(31, 41, 55, 0.95)',
-                        padding: 12,
-                        cornerRadius: 8,
-                        titleFont: {
-                            size: 14,
-                            weight: 'bold'
-                        },
-                        bodyFont: {
-                            size: 13
-                        },
-                        callbacks: {
-                            label: function (context) {
-                                const label = context.label || '';
-                                const value = context.parsed || 0;
-                                const total = context.dataset.data.reduce((a, b) => a + b, 0);
-                                const percentage = ((value / total) * 100).toFixed(1);
-                                return `${label}: ${value} (${percentage}%)`;
+                                weight: 'bold'
                             }
                         }
                     }
@@ -386,26 +353,24 @@
             }
         });
 
-        // Pie Chart: Module Distribution
-        const moduleCtx = document.getElementById('modulePieChart').getContext('2d');
-        const modulePieChart = new Chart(moduleCtx, {
+        // Pie Chart: RTK Validity Status
+        const pieCtx = document.getElementById('rtkStatusPieChart').getContext('2d');
+        const rtkStatusPieChart = new Chart(pieCtx, {
             type: 'pie',
             data: {
-                labels: ['Modul Makro', 'Modul Mikro', 'Modul Pembangunan Ketenagakerjaan'],
+                labels: ['Masih Berlaku', 'Sudah Tidak Berlaku (Perlu Diurus)'],
                 datasets: [{
-                    data: [3456, 4234, 3524],
+                    data: [validCount, expiredCount],
                     backgroundColor: [
                         'rgba(16, 185, 129, 0.8)',
-                        'rgba(245, 158, 11, 0.8)',
-                        'rgba(139, 92, 246, 0.8)'
+                        'rgba(239, 68, 68, 0.8)'
                     ],
                     borderColor: [
                         'rgba(16, 185, 129, 1)',
-                        'rgba(245, 158, 11, 1)',
-                        'rgba(139, 92, 246, 1)'
+                        'rgba(239, 68, 68, 1)'
                     ],
                     borderWidth: 2,
-                    hoverOffset: 10
+                    hoverOffset: 15
                 }]
             },
             options: {
@@ -417,21 +382,32 @@
                         labels: {
                             padding: 20,
                             font: {
-                                size: 13,
-                                weight: '500'
+                                size: 14,
+                                weight: '600'
+                            },
+                            generateLabels: function (chart) {
+                                const data = chart.data;
+                                return data.labels.map((label, i) => ({
+                                    text: `${label}: ${data.datasets[0].data[i]} provinsi`,
+                                    fillStyle: data.datasets[0].backgroundColor[i],
+                                    strokeStyle: data.datasets[0].borderColor[i],
+                                    lineWidth: 2,
+                                    hidden: false,
+                                    index: i
+                                }));
                             }
                         }
                     },
                     tooltip: {
                         backgroundColor: 'rgba(31, 41, 55, 0.95)',
-                        padding: 12,
+                        padding: 15,
                         cornerRadius: 8,
                         titleFont: {
-                            size: 14,
+                            size: 15,
                             weight: 'bold'
                         },
                         bodyFont: {
-                            size: 13
+                            size: 14
                         },
                         callbacks: {
                             label: function (context) {
@@ -439,7 +415,7 @@
                                 const value = context.parsed || 0;
                                 const total = context.dataset.data.reduce((a, b) => a + b, 0);
                                 const percentage = ((value / total) * 100).toFixed(1);
-                                return `${label}: ${value} (${percentage}%)`;
+                                return `${label}: ${value} provinsi (${percentage}%)`;
                             }
                         }
                     }
